--- a/index.html
+++ b/index.html
@@ -8,6 +8,21 @@
     <link href="/css/estilos.css" rel="stylesheet"/>
 </head>
 <body>
-    
+    <div class="contenedor">
+        <h2>Login</h2>
+        <form id="forma" name="forma" method="POST">
+            <div class="elemento">
+                <label for="usuario">Usuario</label>
+                <input type="text" id="usuario" name="usuario" required/>
+            </div>
+            <div class="elemento">
+                <label for="password">Password</label>
+                <input type="password" id="password" name="password" required/>
+            </div>
+            <div class="elemento">
+                <input type="submit" value="Enviar">
+            </div>
+        </form>
+    </div>
 </body>
 </html>
